[package]
name = "candy_machine"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
toml = "0.7.6"
serde_derive = "1.0.188"
tokio = { version = "1.12.0", features = ["full"] }
bip32 = "0.5.1"
serde_bytes = "0.11"
bincode = "1.3.3"
secp256k1 = "0.27.0"
cosmos-grpc-client = "0.2.2"