[package]
name = "candy_machine"
version = "1.0.0"
edition = "2021"
authors = ["Morgan Metz <morgan@unison.app>", "The Nebula Community ❤️"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
toml = "0.7.6"
serde_derive = "1.0.188"
tokio = { version = "1.12.0", features = ["full"] }
serde_bytes = "0.11"
cosmos-grpc-client = "0.2.2"