[package]
name = "candy_machine"
version = "1.0.0"
edition = "2018"
authors = ["Morgan Metz <morgan@unison.app>", "The Nebula Community ❤️"]

[dependencies]
serde_derive = "1.0.188"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.6"
tokio = { version = "1.32.0", features = ["full"] }
serde_bytes = "0.11"
cosmos-grpc-client = "0.2.4"
cosmos-sdk-proto = "0.19.0"
tonic = "0.10.0"
rustc-serialize = "0.3.24"